collum set, text area, button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,123 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      
+      <div class="container">
+        <div class="row" id="8">
+          <div class="hour col-lg-2 col-sm-12">
+           8 AM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save  fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="9">
+          <div class="hour col-lg-2 col-sm-12">
+           9 AM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="10">
+          <div class="hour col-lg-2 col-sm-12">
+          10 AM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="11">
+          <div class="hour col-lg-2 col-sm-12">
+           11 AM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="12">
+          <div class="hour col-lg-2 col-sm-12">
+           12 PM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="13">
+          <div class="hour col-lg-2 col-sm-12">
+            1 PM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="14">
+          <div class="hour col-lg-2 col-sm-12">
+           2 PM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="16">
+          <div class="hour col-lg-2 col-sm-12">
+           3 PM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+            <i class="fas fa-save fa-3x"></i>
+          </button>
+        </div>
+        <div class="row" id="16">
+          <div class="hour col-lg-2 col-sm-12">
+           4 PM
+          </div>
+          <textarea  class="col-8">
+            To Do Items
+          </textarea>
+          <button class="col-2 saveBtn">
+              <i class="fas fa-save fa-3x"></i>
+            </button>
+          </div>
+          <div class="row" id="17">
+            <div class="hour col-lg-2 col-sm-12">
+          5 PM
+            </div>
+            <textarea  class="col-8">
+              To Do Items
+            </textarea>
+            <button class="col-2 saveBtn">
+                <i class="fas fa-save fa-3x"></i>
+              </button>
+            </div>
+        </div>
+      </div>
     </div>
-    <script src="script.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
