assign color to hours

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="container">
-        <div class="row" id="8">
+        <div class="row" id="8" value="8">
           <div class="hour col-lg-2 col-sm-12">
-           8 AM
+            8 AM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -42,9 +42,9 @@
             <i class="fas fa-save  fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="9">
+        <div class="row" id="9" value="9">
           <div class="hour col-lg-2 col-sm-12">
-           9 AM
+            9 AM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -53,7 +53,7 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="10">
+        <div class="row" id="10" value="10">
           <div class="hour col-lg-2 col-sm-12">
           10 AM
           </div>
@@ -64,9 +64,9 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="11">
+        <div class="row" id="11" value="11">
           <div class="hour col-lg-2 col-sm-12">
-           11 AM
+          11 AM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -75,9 +75,9 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="12">
+        <div class="row" id="12" value="12">
           <div class="hour col-lg-2 col-sm-12">
-           12 PM
+          12 PM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -86,7 +86,7 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="13">
+        <div class="row" id="13" value="13">
           <div class="hour col-lg-2 col-sm-12">
             1 PM
           </div>
@@ -97,9 +97,9 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="14">
+        <div class="row" id="14" value="14">
           <div class="hour col-lg-2 col-sm-12">
-           2 PM
+            2 PM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -108,9 +108,9 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="16">
+        <div class="row" id="15" value="15">
           <div class="hour col-lg-2 col-sm-12">
-           3 PM
+            3 PM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -119,9 +119,9 @@
             <i class="fas fa-save fa-3x"></i>
           </button>
         </div>
-        <div class="row" id="16">
+        <div class="row" id="16" value="16">
           <div class="hour col-lg-2 col-sm-12">
-           4 PM
+            4 PM
           </div>
           <textarea  class="col-8">
             To Do Items
@@ -130,9 +130,9 @@
               <i class="fas fa-save fa-3x"></i>
             </button>
           </div>
-          <div class="row" id="17">
+          <div class="row" id="17" value="17">
             <div class="hour col-lg-2 col-sm-12">
-          5 PM
+            5 PM
             </div>
             <textarea  class="col-8">
               To Do Items
@@ -144,7 +144,6 @@
         </div>
       </div>
     </div>
-    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
